--- a/style.css
+++ b/style.css
@@ -52,5 +52,27 @@ font-style: normal;
 font-weight: 800;
 font-size: 56px;
 line-height: 120%;
-margin-bottom: 24px;
+}
+
+.hero-description{
+color: var(--gray-color);
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 150%;
+margin: 24px 0 40px 0;
+}
+
+button{
+background:var(--gradient-pink);
+border: none;
+cursor: pointer;
+padding: 16px 32px;
+border-radius: 30px;
+color: var(--wwhite-color);
+font-family: 'Plus Jakarta Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
 }
