--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 body{
   margin: 0;
-  overflow-y: hidden;
+  background: #FFFFFF;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 
@@ -25,12 +25,25 @@ body{
   box-sizing: border-box;
 }
 
-.wrapper{
-  max-width: 1120px;
-  margin: 0 auto;
+.overflow-wrapper{
+  overflow-x: hidden;
+  position: relative;
 }
 
-nav{
+.container{
+  width: 90%;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+
+/* nav{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -75,4 +88,4 @@ font-style: normal;
 font-weight: 700;
 font-size: 18px;
 line-height: 150%;
-}
+} */
