--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ transition: .2s ease-in;
   display: none;
 }
 
+.hero-mobile-img{
+  display: none;
+}
+
 /* media queries */
 
 @media screen and (max-width:1100px){
@@ -141,6 +145,28 @@ transition: .2s ease-in;
   }
   
 }
+
+@media screen and (max-width:820px){
+  h1{
+    font-weight: 800;
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width:740px){
+  .hero-content{
+    display: flex;
+    flex-direction: column;
+  }
+ 
+  .hero-mobile-img{
+    display: block;
+  }
+  .hero-tablet-img{
+    display: none;
+  }
+}
+
 
 @media screen and (max-width:376px){
   .dark-btn{
