--- a/style.css
+++ b/style.css
@@ -152,7 +152,9 @@ POPULAR COURSES
   width: 352px;
   height: 322px;
   border-radius: 15px;
+  margin-top: 64px;
   background: var(--wwhite-color);
+  position: relative;
 }
 
 
@@ -175,7 +177,7 @@ color: white;
 } 
 
 .course-box-text{
-  padding: 64px 32px 40px 32px ;
+  padding: 50px 32px 40px 32px ;
 }
 
 h3{
@@ -185,6 +187,28 @@ font-size: 24px;
 line-height: 120%;
 color: var(--blue-color);
 padding-bottom: 24px;
+}
+
+.course-box p{
+font-family: 'Plus Jakarta Sans';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 150%;
+color: #83869A;
+padding-bottom: 24px;
+width: 90%;
+}
+
+.course-box-link{
+color:var(--pink-color);
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 150%;
+cursor: pointer;
+position: absolute;
+bottom: 10%;
 }
 
 /* PRACTICALS */
