--- a/style.css
+++ b/style.css
@@ -211,6 +211,32 @@ position: absolute;
 bottom: 10%;
 }
 
+/* FOOTER */
+footer{
+background: #13183F;
+padding-block: 24px;
+}
+
+.footer-nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-btn{
+  background: var(--gradient-purple);
+  color: var(--wwhite-color);
+  padding: 16px 32px ;
+  border-radius: 30px;
+  font-size: 18px;
+  font-weight: 700px;
+  cursor: pointer;
+  transition: .2s ease-in;
+}
+
+.footer-btn:hover{
+  opacity: .8;
+}
 /* PRACTICALS */
 /* .courses-contents{
   width: 100%;
@@ -231,6 +257,13 @@ bottom: 10%;
 
 /* media queries */
 
+@media screen and (max-width:1400px){
+  .courses-contents{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px 0px;
+  }
+  
+}
 @media screen and (max-width:1100px){
   .hero-tablet-img{
     display: block;
@@ -246,6 +279,11 @@ bottom: 10%;
     font-weight: 800;
     font-size: 40px;
   }
+
+  .courses-contents{
+    grid-template-columns: repeat(2, 1fr);
+  
+  }
   
 }
 
@@ -254,9 +292,26 @@ bottom: 10%;
     font-weight: 800;
     font-size: 35px;
   }
+
+  .courses-contents{
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .course-box{
+    width: 100%;
+    height: 322px;
+    border-radius: 15px;
+    margin-top: 64px;
+    background: var(--wwhite-color);
+    position: relative;
+  }
+
 }
 
 @media screen and (max-width:740px){
+
+ 
+
   .hero-content{
     display: flex;
     flex-direction: column;
